Documentation edits made through Mintlify web editor

--- a/the-platform/overview.mdx
+++ b/the-platform/overview.mdx
@@ -127,7 +127,7 @@ Each campaign has a clearly defined goal. Progress towards achieving that goal i
 **If Unsuccessful:** Initiate an AI Voice Call.  
   </Step>
   <Step title="Step 3: Initiate a call to engage the user directly">
-**Action:** Attempt to schedule or confirm the demo.
+**Action:** Attempt to schedule or confirm the demo.<br/>
 **Post-Call:** Depending on the call's outcome, either mark the goal as achieved or continue nurturing the lead via SMS/Webchat.
   </Step>
 </Steps>
@@ -175,7 +175,7 @@ Leverage user history and behavior (e.g., past interactions, engagement level) t
 </Steps>
 
 
-### In Summary
+## In Summary
 
 Plura's AI-driven Omni-Channel Campaign Builder gives businesses the ability to craft seamless, dynamic customer journeys using Webchat, SMS, and Voice Call agents. By leveraging conditional transitions, global agents, and a centralized state management system, Plura ensures personalized, relevant, and goal-oriented communications across all touchpoints.
 
