--- a/introduction.mdx
+++ b/introduction.mdx
@@ -14,58 +14,75 @@ description: 'Welcome to Plura'
   alt="Hero Dark"
 />
 
-## Setting up
+## What is Plura?
 
-The first step to world-class documentation is setting up your editing environments.
+Plura is an omni-channel AI Customer Journey builder that enables businesses to design sophisticated, AI campaigns across Webchat, SMS, and Voice Call channels.
+
+Plura's Global Engagement Sync (GES) is a cutting-edge, centralized stateful management system that ensures synchronization across multiple channels (Webchat, SMS, Voice Call) in real time. It dynamically manages user interactions, providing personalized, contextually aware communication throughout a customer’s journey, no matter where they engage.
+
+**Key Features of GES**
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
+    title="Unified Interaction Memory"
     href="https://mintlify.com/docs/quickstart"
   >
-    Get your docs set up locally for easy development
+    GES keeps a real-time, centralized record of all user interactions across channels. This ensures that no matter where a customer engages—whether they’re on a webchat, receiving an SMS, or on a voice call—their history and current state are instantly accessible to any agent.
   </Card>
   <Card
-    title="Preview Changes"
-    icon="image"
+    title="Real-Time Sync Across Channels"
     href="https://mintlify.com/docs/development"
   >
-    Preview your changes before you push to make sure they're perfect
+    With GES, when a user switches from one channel to another (e.g., from webchat to SMS), the system automatically picks up where the conversation left off. This creates a seamless transition, reducing friction and improving the overall user experience.
+  </Card>
+  <Card
+    title="Smart Transitions & Dynamic Campaign Control"
+    href="https://mintlify.com/docs/development"
+  >
+    GES empowers campaigns to adjust dynamically based on real-time conditions. If a user interacts on one channel and doesn’t respond, GES ensures the appropriate follow-up happens on the next channel without skipping a beat, driving the user toward the campaign goal.
+  </Card>
+  <Card
+    title="Personalized Engagement"
+    href="https://mintlify.com/docs/development"
+  >
+    By constantly tracking user preferences and interactions, GES allows every touchpoint to feel personal. Every message, call, or chat interaction is tailored to the customer’s current state, making them feel heard and valued at every step of the journey.
+  </Card>
+  <Card
+    title="Goal-Oriented Flexibility"
+    href="https://mintlify.com/docs/development"
+  >
+    GES is designed to help campaigns stay focused on achieving specific goals (e.g., scheduling a demo or making a sale). It tracks whether the goal has been met, and if not, GES continues the engagement journey across channels until the goal is achieved or the user opts out.
   </Card>
 </CardGroup>
 
-## Make it yours
+## How GES Works
 
 Update your docs to your brand and add valuable content for the best user conversion.
 
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+<Steps>
+  <Step title="Contexual Continuity">
+GES ensures that each interaction is aware of what happened before. If a customer engaged via webchat but didn’t finish an action, GES stores that information and lets the next channel (SMS or Voice Call) pick up the conversation with full awareness of the user’s last actions.
+  </Step>
+  <Step title="Cross-Channel Syncing">
+If the user opens a webchat while receiving SMS messages or vice versa, GES automatically syncs the states, ensuring that the user doesn’t experience redundant or conflicting messages. This keeps the campaign fluid and responsive.  
+  </Step>
+  <Step title="Dynamic Updates">
+As the customer moves through the campaign, GES continuously updates their state (e.g., last message received, last action taken) in real time, making sure all channels are working from the same up-to-date information..
+  </Step>
+</Steps>
+
+## Why GES is a game-changer
+
+**Uninterrupted User Experience:**<br/>
+Whether the user switches from webchat to SMS or gets a follow-up voice call, GES ensures that each interaction is part of a cohesive experience, removing the frustration of repeating information.
+
+**Increased Conversion Rates:**<br/>
+By keeping track of where users are in their journey, GES allows campaigns to adjust and re-engage them at the right time and on the right channel, leading to higher conversion rates and better user satisfaction.
+
+**Effortless Campaign Management:**
+GES simplifies the complexity of multi-channel campaigns, letting businesses focus on creating personalized, effective engagements while the system handles all the behind-the-scenes state management.
+
+**Scalability & Flexibility:**<br/>
+As campaigns grow and more channels are added, GES scales effortlessly, adapting to handle more complex user journeys and maintaining synchronization across all touchpoints.
+
+The inroduction of GES allows Plura to offer a revolutionary solution for businesses to manage complex, multi-channel campaigns with ease, enhancing customer experience and driving better outcomes.
