--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,57 +3,28 @@ title: Introduction
 description: 'Welcome to Plura'
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
-
 ## What is Plura?
 
 Plura is an omni-channel AI Customer Journey builder that enables businesses to design sophisticated, AI campaigns across Webchat, SMS, and Voice Call channels.
 
 Plura's Global Engagement Sync (GES) is a cutting-edge, centralized stateful management system that ensures synchronization across multiple channels (Webchat, SMS, Voice Call) in real time. It dynamically manages user interactions, providing personalized, contextually aware communication throughout a customer’s journey, no matter where they engage.
 
-**Key Features of GES**
+## **Key Features of GES**
 
-<CardGroup cols={2}>
-  <Card
-    title="Unified Interaction Memory"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    GES keeps a real-time, centralized record of all user interactions across channels. This ensures that no matter where a customer engages—whether they’re on a webchat, receiving an SMS, or on a voice call—their history and current state are instantly accessible to any agent.
-  </Card>
-  <Card
-    title="Real-Time Sync Across Channels"
-    href="https://mintlify.com/docs/development"
-  >
-    With GES, when a user switches from one channel to another (e.g., from webchat to SMS), the system automatically picks up where the conversation left off. This creates a seamless transition, reducing friction and improving the overall user experience.
-  </Card>
-  <Card
-    title="Smart Transitions & Dynamic Campaign Control"
-    href="https://mintlify.com/docs/development"
-  >
-    GES empowers campaigns to adjust dynamically based on real-time conditions. If a user interacts on one channel and doesn’t respond, GES ensures the appropriate follow-up happens on the next channel without skipping a beat, driving the user toward the campaign goal.
-  </Card>
-  <Card
-    title="Personalized Engagement"
-    href="https://mintlify.com/docs/development"
-  >
-    By constantly tracking user preferences and interactions, GES allows every touchpoint to feel personal. Every message, call, or chat interaction is tailored to the customer’s current state, making them feel heard and valued at every step of the journey.
-  </Card>
-  <Card
-    title="Goal-Oriented Flexibility"
-    href="https://mintlify.com/docs/development"
-  >
-    GES is designed to help campaigns stay focused on achieving specific goals (e.g., scheduling a demo or making a sale). It tracks whether the goal has been met, and if not, GES continues the engagement journey across channels until the goal is achieved or the user opts out.
-  </Card>
-</CardGroup>
+**Unified Interaction Memory**<br/>
+GES keeps a real-time, centralized record of all user interactions across channels. This ensures that no matter where a customer engages—whether they’re on a webchat, receiving an SMS, or on a voice call—their history and current state are instantly accessible to any agent.
+
+**Real-Time Sync Across Channels**<br/>
+With GES, when a user switches from one channel to another (e.g., from webchat to SMS), the system automatically picks up where the conversation left off. This creates a seamless transition, reducing friction and improving the overall user experience.
+
+**Smart Transitions & Dynamic Campaign Control**<br/>
+GES empowers campaigns to adjust dynamically based on real-time conditions. If a user interacts on one channel and doesn’t respond, GES ensures the appropriate follow-up happens on the next channel without skipping a beat, driving the user toward the campaign goal
+
+**Personalized Engagement**<br/>
+By constantly tracking user preferences and interactions, GES allows every touchpoint to feel personal. Every message, call, or chat interaction is tailored to the customer’s current state, making them feel heard and valued at every step of the journey.
+
+**Goal-Oriented Flexibility**<br/>
+GES is designed to help campaigns stay focused on achieving specific goals (e.g., scheduling a demo or making a sale). It tracks whether the goal has been met, and if not, GES continues the engagement journey across channels until the goal is achieved or the user opts out.
 
 ## How GES Works
 
