Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,7 +3,7 @@ title: Introduction
 description: 'Welcome to Plura'
 ---
 
-## What is Plura?
+## **What is Plura?**
 
 Plura is an omni-channel AI Customer Journey builder that enables businesses to design sophisticated, AI campaigns across Webchat, SMS, and Voice Call channels.
 
@@ -11,22 +11,22 @@ Plura's Global Engagement Sync (GES) is a cutting-edge, centralized stateful man
 
 ## **Key Features of GES**
 
-**Unified Interaction Memory**<br/>
+- **Unified Interaction Memory**<br/>
 GES keeps a real-time, centralized record of all user interactions across channels. This ensures that no matter where a customer engages—whether they’re on a webchat, receiving an SMS, or on a voice call—their history and current state are instantly accessible to any agent.
 
-**Real-Time Sync Across Channels**<br/>
+- **Real-Time Sync Across Channels**<br/>
 With GES, when a user switches from one channel to another (e.g., from webchat to SMS), the system automatically picks up where the conversation left off. This creates a seamless transition, reducing friction and improving the overall user experience.
 
-**Smart Transitions & Dynamic Campaign Control**<br/>
+- **Smart Transitions & Dynamic Campaign Control**<br/>
 GES empowers campaigns to adjust dynamically based on real-time conditions. If a user interacts on one channel and doesn’t respond, GES ensures the appropriate follow-up happens on the next channel without skipping a beat, driving the user toward the campaign goal
 
-**Personalized Engagement**<br/>
+- **Personalized Engagement**<br/>
 By constantly tracking user preferences and interactions, GES allows every touchpoint to feel personal. Every message, call, or chat interaction is tailored to the customer’s current state, making them feel heard and valued at every step of the journey.
 
-**Goal-Oriented Flexibility**<br/>
+- **Goal-Oriented Flexibility**<br/>
 GES is designed to help campaigns stay focused on achieving specific goals (e.g., scheduling a demo or making a sale). It tracks whether the goal has been met, and if not, GES continues the engagement journey across channels until the goal is achieved or the user opts out.
 
-## How GES Works
+## **How GES Works**
 
 Update your docs to your brand and add valuable content for the best user conversion.
 
@@ -42,7 +42,7 @@ As the customer moves through the campaign, GES continuously updates their state
   </Step>
 </Steps>
 
-## Why GES is a game-changer
+## **Why GES is a Game-Changer**
 
 **Uninterrupted User Experience:**<br/>
 Whether the user switches from webchat to SMS or gets a follow-up voice call, GES ensures that each interaction is part of a cohesive experience, removing the frustration of repeating information.
