Documentation edits made through Mintlify web editor

--- a/compliance.mdx
+++ b/compliance.mdx
@@ -8,5 +8,5 @@ At Plura, your privacy and security are paramount. We realize the trust your are
 ## Trust Certification
 Visit our [Compliance Trust Center](https://www.vanta.com/) for the compliance certificates.
 
-## Need More Support?
-If you have any questions regarding our compliance, please do not hesitate to contact us at compliance@plura.ai. Our team is here to answer any questions about protecting your privacy, security and data.
+## Business Associate Agreement (BAA)
+If you require a Business Associate Agreement (BAA) or have any questions regarding our compliance, please do not hesitate to contact us at compliance@plura.ai. Our team is here to answer any questions about protecting your privacy, security and data.
