Documentation edits made through Mintlify web editor

--- a/intro-to-plura.mdx
+++ b/intro-to-plura.mdx
@@ -7,7 +7,7 @@ description: 'Welcome to Plura'
 
 Plura is an omni-channel AI Customer Journey builder that enables businesses to design sophisticated, AI campaigns across Webchat, SMS, and Voice Call channels.
 
-Plura's Global Engagement Sync (GES) is a cutting-edge, centralized stateful management system that ensures synchronization across multiple channels (Webchat, SMS, Voice Call) in real-time. It dynamically manages user interactions, providing personalized, contextually aware communication throughout a customer’s journey, no matter where they engage.
+Plura's Global Engagement Sync (GES) is a cutting-edge, centralized stateful Ai platform that ensures synchronization across multiple channels (Webchat, SMS, Voice Call) in real-time. It dynamically manages user interactions, providing personalized, contextually aware communication throughout a customer’s journey, no matter where they engage.
 
 ## **Key Features of GES**
 
