Documentation edits made through Mintlify web editor

--- a/compliance.mdx
+++ b/compliance.mdx
@@ -6,7 +6,7 @@ description: 'Compliance, Safety, and Security are Paramount'
 At Plura, your privacy and security are paramount. We realize the trust your are placing in us everyday to safeguard your data. We take this responsibility very seriously. Ensuring the safety and security of your data is not just a policy; it’s a core principle that we stand by. To align with our commitment to your privacy, we are HIPAA complaint, GDPR complaint, SOC 2 Type 1, and SOC 2 Type 2 certified. Your data will always remain protected, secure, and confidential within your Plura account.
 
 ## Trust Certification
-Visit our [Compliance Trust Center](https://www.vanta.com/) for the compliance certificates.
+Visit our [Compliance Trust Center](https://drata.com/) for the compliance certificates.
 
 ## Business Associate Agreement (BAA)
 If you require a Business Associate Agreement (BAA) or have any questions regarding our compliance, please do not hesitate to contact us at compliance@plura.ai. Our team is here to answer any questions about protecting your privacy, security and data.
