Documentation edits made through Mintlify web editor

--- a/intro-to-plura.mdx
+++ b/intro-to-plura.mdx
@@ -5,7 +5,7 @@ description: 'Welcome to Plura'
 
 ## **What is Plura?**
 
-Plura is an omni-channel AI Customer Journey builder that enables businesses to design sophisticated, AI campaigns across Webchat, SMS, and Voice Call channels.
+Plura is an omni-channel AI Customer Journey builder that enables businesses to sync sophisticated, AI Agents across Webchat, SMS, and Voice channels.
 
 Plura's Global Engagement Sync (GES) manages user interactions, providing personalized, contextually aware communication throughout a customer’s journey, no matter where they engage.
 
@@ -15,7 +15,7 @@ Plura's Global Engagement Sync (GES) manages user interactions, providing person
 GES keeps a real-time, centralized record of all user interactions across channels. This ensures that no matter where a customer engages—whether they’re on a webchat, receiving an SMS, or on a voice call—their history and current state are instantly accessible to any agent.
 
 - **Real-Time Sync Across Channels**<br/>
-With GES, when a user switches from one channel to another (e.g., from webchat to SMS), the system automatically picks up where the conversation left off. This creates a seamless transition, reducing friction and improving the overall user experience.
+With GES, when a user switches from one channel to another (e.g., from a call to SMS to Webchat), the system automatically picks up where the conversation left off. This creates a seamless transition, reducing friction and improving the overall user experience.
 
 - **Smart Transitions & Dynamic Campaign Control**<br/>
 GES empowers campaigns to adjust dynamically based on real-time conditions. If a user interacts on one channel and doesn’t respond, GES ensures the appropriate follow-up happens on the next channel without skipping a beat, driving the user toward the campaign goal
