Documentation edits made through Mintlify web editor

--- a/intro-to-plura.mdx
+++ b/intro-to-plura.mdx
@@ -5,7 +5,7 @@ description: 'Welcome to Plura'
 
 ## **What is Plura?**
 
-Plura is an omni-channel AI Customer Journey builder that enables businesses to sync sophisticated, AI Agents across Webchat, SMS, and Voice channels.
+Plura is an omni-channel AI Customer Journey builder that enables businesses to sync teams of sophisticated, AI Agents across Webchat, SMS, and Voice channels.
 
 Plura's Omni-Flow system manages user interactions, providing personalized, contextually aware communication throughout a customer’s journey, no matter where they engage.
 
