--- a/intro-to-plura.mdx
+++ b/intro-to-plura.mdx
@@ -5,54 +5,55 @@ description: 'Welcome to Plura'
 
 ## **What is Plura?**
 
-Plura is an omni-channel AI Customer Journey builder that enables businesses to sync teams of sophisticated, AI Agents across Webchat, SMS, and Voice channels.
+Plura is an omni-channel AI customer journey builder that enables businesses to sync teams of sophisticated, AI Agents across webchat, SMS, and voice channels.
 
-Plura's Omni-Flow system manages user interactions, providing personalized, contextually aware communication throughout a customer’s journey, no matter where they engage.
+Plura's Journey builder manages user interactions, providing personalized, contextually aware communication throughout a customer’s journey, no matter where they engage.
 
 ## **Key Features of Omni-Flows**
 
-- **Unified Interaction Memory**<br/>
-Omni-Flows keep a real-time, centralized record of all user interactions across channels. This ensures that no matter where a customer engages their call, SMS or Webchat history and current state are instantly accessible to any agent.
+* **Unified Interaction Memory**<br />
+  Omni-Flows keep a real-time, centralized record of all user interactions across channels. This ensures that no matter where a customer engages their call, SMS or Webchat history and current state are instantly accessible to any agent.
 
-- **Real-Time Sync Across Channels**<br/>
-With Omni-Flows, when a user switches from one channel to another (e.g., from a call to SMS to Webchat), the system automatically picks up where the conversation left off. This creates a seamless transition, reducing friction and improving the overall user experience.
+* **Real-Time Sync Across Channels**<br />
+  With Omni-Flows, when a user switches from one channel to another (e.g., from a call to SMS to Webchat), the system automatically picks up where the conversation left off. This creates a seamless transition, reducing friction and improving the overall user experience.
 
-- **Smart Transitions & Dynamic Agent Control**<br/>
-Omni-Flows empower teams of Agents to adjust dynamically based on real-time conditions. If a user interacts on one channel and doesn’t respond, an Omni-Flow ensures the appropriate follow-up happens on the next channel without skipping a beat, driving the user toward the Agent goal.
+* **Smart Transitions & Dynamic Agent Control**<br />
+  Omni-Flows empower teams of Agents to adjust dynamically based on real-time conditions. If a user interacts on one channel and doesn’t respond, an Omni-Flow ensures the appropriate follow-up happens on the next channel without skipping a beat, driving the user toward the Agent goal.
 
-- **Personalized Engagement**<br/>
-By constantly tracking user preferences and interactions, Omni-Flows allow every touchpoint to feel personal. Every message, call, or chat interaction is tailored to the customer’s current state, making them feel heard and valued at every step of the journey.
+* **Personalized Engagement**<br />
+  By constantly tracking user preferences and interactions, Omni-Flows allow every touchpoint to feel personal. Every message, call, or chat interaction is tailored to the customer’s current state, making them feel heard and valued at every step of the journey.
 
-- **Goal-Oriented Flexibility**<br/>
-Omni-Flows are designed to help a team of Agents stay focused on achieving specific goals (e.g., scheduling a demo or making a sale). It tracks whether the goal has been met, and if not, the Omni-Flow continues the cusotmer's journey across channels until the goal is achieved or the user opts out.
+* **Goal-Oriented Flexibility**<br />
+  Omni-Flows are designed to help a team of Agents stay focused on achieving specific goals (e.g., scheduling a demo or making a sale). It tracks whether the goal has been met, and if not, the Omni-Flow continues the cusotmer's journey across channels until the goal is achieved or the user opts out.
 
 ## **How Omni-Flows Work**
 
-
 <Steps>
   <Step title="Contexual Continuity">
-Omni-Flows ensure that each interaction is aware of what happened before. If a customer engaged via webchat but didn’t finish an action, am Omni-Flow store that information and lets the next channel (SMS or Voice Call) pick up the conversation with full awareness of the user’s last actions.
+    Omni-Flows ensure that each interaction is aware of what happened before. If a customer engaged via webchat but didn’t finish an action, am Omni-Flow store that information and lets the next channel (SMS or Voice Call) pick up the conversation with full awareness of the user’s last actions.
   </Step>
+
   <Step title="Cross-Channel Syncing">
-If the user opens a webchat while receiving SMS message or vice versa, the Omni-Flow automatically syncs the states, ensuring that the user doesn’t experience redundant or conflicting message. This keeps the Agent fluid and responsive.  
+    If the user opens a webchat while receiving SMS message or vice versa, the Omni-Flow automatically syncs the states, ensuring that the user doesn’t experience redundant or conflicting message. This keeps the Agent fluid and responsive.
   </Step>
+
   <Step title="Dynamic Updates">
-As the customer moves through each Agent, the Omni-Flow continuously updates their state (e.g., last message received, last action taken) in real time, making sure all channels are working from the same up-to-date information..
+    As the customer moves through each Agent, the Omni-Flow continuously updates their state (e.g., last message received, last action taken) in real time, making sure all channels are working from the same up-to-date information..
   </Step>
 </Steps>
 
 ## **Why Omni-Flows are a Game-Changer**
 
-**Uninterrupted User Experience:**<br/>
+**Uninterrupted User Experience:**<br />
 Whether the user switches from webchat to SMS or gets a follow-up voice call, Omni-Flows ensure that each interaction is part of a cohesive experience, removing the frustration of repeating information.
 
-**Increased Conversion Rates:**<br/>
+**Increased Conversion Rates:**<br />
 By keeping track of where users are in their journey, Omni-Flows allow Agents to adjust and re-engage them at the right time and on the right channel, leading to higher conversion rates and better user satisfaction.
 
 **Effortless Agent Management:**
 Omni-Flows simplify the complexity of multi-channel Agents, letting businesses focus on creating personalized, effective engagements while the system handles all the behind-the-scenes state management.
 
-**Scalability & Flexibility:**<br/>
+**Scalability & Flexibility:**<br />
 As Agents grow and more channels are added, Omni-Flows scale effortlessly, adapting to handle more complex user journeys and maintaining synchronization across all touchpoints.
 
 The inroduction of Omni-Flows allows Plura to offer a revolutionary solution for businesses to manage complex, multi-channel Agents with ease, enhancing customer experience and driving better outcomes.
