Documentation edits made through Mintlify web editor

--- a/intro-to-plura.mdx
+++ b/intro-to-plura.mdx
@@ -11,19 +11,23 @@ Plura's Journey builder manages user interactions, providing personalized, conte
 
 ## **Key Features of Omni-Flows**
 
-* **Unified Interaction Memory**<br />
+* **Unified Interaction Memory**
   Omni-Flows keep a real-time, centralized record of all user interactions across channels. This ensures that no matter where a customer engages their call, SMS or Webchat history and current state are instantly accessible to any agent.
 
-* **Real-Time Sync Across Channels**<br />
-  With Omni-Flows, when a user switches from one channel to another (e.g., from a call to SMS to Webchat), the system automatically picks up where the conversation left off. This creates a seamless transition, reducing friction and improving the overall user experience.
 
-* **Smart Transitions & Dynamic Agent Control**<br />
-  Omni-Flows empower teams of Agents to adjust dynamically based on real-time conditions. If a user interacts on one channel and doesn’t respond, an Omni-Flow ensures the appropriate follow-up happens on the next channel without skipping a beat, driving the user toward the Agent goal.
+* **Real-Time Sync Across Channels**
+  When a user switches from one channel to another (e.g., from a call to SMS to webchat), the system automatically picks up where the conversation left off. This creates a seamless transition, reducing friction and improving the overall user experience.
 
-* **Personalized Engagement**<br />
+
+* **Smart Transitions & Dynamic Agent Control**
+  Journeys empower teams of Agents to adjust dynamically based on real-time conditions. If a user interacts on one channel and doesn’t respond, an Omni-Flow ensures the appropriate follow-up happens on the next channel without skipping a beat, driving the user toward the Agent goal.
+
+
+* **Personalized Engagement**
   By constantly tracking user preferences and interactions, Omni-Flows allow every touchpoint to feel personal. Every message, call, or chat interaction is tailored to the customer’s current state, making them feel heard and valued at every step of the journey.
 
-* **Goal-Oriented Flexibility**<br />
+
+* **Goal-Oriented Flexibility**
   Omni-Flows are designed to help a team of Agents stay focused on achieving specific goals (e.g., scheduling a demo or making a sale). It tracks whether the goal has been met, and if not, the Omni-Flow continues the cusotmer's journey across channels until the goal is achieved or the user opts out.
 
 ## **How Omni-Flows Work**
