Documentation edits made through Mintlify web editor

--- a/intro-to-plura.mdx
+++ b/intro-to-plura.mdx
@@ -7,12 +7,12 @@ description: 'Welcome to Plura'
 
 Plura is an omni-channel AI customer journey builder that enables businesses to sync teams of sophisticated, AI Agents across webchat, SMS, and voice channels.
 
-Plura's Journey builder manages user interactions, providing personalized, contextually aware communication throughout a customer’s journey, no matter where they engage.
+Plura's omni-flow builder manages user interactions, providing personalized, contextually aware communication throughout a customer’s journey, no matter where they engage.
 
 ## **Key Features of Omni-Flows**
 
 * **Unified Interaction Memory**
-  Omni-Flows keep a real-time, centralized record of all user interactions across channels. This ensures that no matter where a customer engages their call, SMS or Webchat history and current state are instantly accessible to any agent.
+  Omni-flows keep a real-time, centralized record of all user interactions across channels. This ensures that no matter where a customer engages their call, SMS or Webchat history and current state are instantly accessible to any agent.
 
 
 * **Real-Time Sync Across Channels**
@@ -20,15 +20,15 @@ Plura's Journey builder manages user interactions, providing personalized, conte
 
 
 * **Smart Transitions & Dynamic Agent Control**
-  Journeys empower teams of Agents to adjust dynamically based on real-time conditions. If a user interacts on one channel and doesn’t respond, an Omni-Flow ensures the appropriate follow-up happens on the next channel without skipping a beat, driving the user toward the Agent goal.
+  Omni-flows empower teams of Agents to adjust dynamically based on real-time conditions. If a user interacts on one channel and doesn’t respond, an Omni-Flow ensures the appropriate follow-up happens on the next channel without skipping a beat, driving the user toward the Agent goal.
 
 
 * **Personalized Engagement**
-  By constantly tracking user preferences and interactions, Omni-Flows allow every touchpoint to feel personal. Every message, call, or chat interaction is tailored to the customer’s current state, making them feel heard and valued at every step of the journey.
+  By constantly tracking user preferences and interactions, omni-flows allow every touchpoint to feel personal. Every message, call, or chat interaction is tailored to the customer’s current state, making them feel heard and valued at every step of the journey.
 
 
 * **Goal-Oriented Flexibility**
-  Omni-Flows are designed to help a team of Agents stay focused on achieving specific goals (e.g., scheduling a demo or making a sale). It tracks whether the goal has been met, and if not, the Omni-Flow continues the cusotmer's journey across channels until the goal is achieved or the user opts out.
+  Omni-flows are designed to help a team of Agents stay focused on achieving specific goals (e.g., scheduling a demo or making a sale). It tracks whether the goal has been met, and if not, the omni-flow continues the customer's journey across channels until the goal is achieved or the user opts out.
 
 ## **How Omni-Flows Work**
 
