--- a/the-platform/workflows/overview.mdx
+++ b/the-platform/workflows/overview.mdx
@@ -2,6 +2,8 @@
 title: "Workflows"
 ---
 
+<video controls className="w-full aspect-video" src="https://www.tella.tv/video/plura-overview-1-15ur" />
+
 ## What Are Workflows?
 
 A **Workflow** in Plura AI is a structured conversational system designed to create a natural conversation while ensuring the AI stays on track. It achieves this by breaking interactions into goal-oriented components, each represented by a **node** with a distinct purpose.
@@ -16,32 +18,24 @@ A Workflow consists of the following key elements:
 
 Nodes are the building blocks of a Workflow. Each node serves a unique purpose and helps structure the conversation logically. Some of the primary node types include:
 
-* **AI Conversation Node**: The core node where you provide specific instructions to the AI for handling a segment of the conversation.
-
-* **Knowledge Base Node**: Enables the AI to retrieve relevant information from a predefined knowledge source.
-
-* **End Call Node**: Terminates the conversation when a specific outcome is reached.
-
-* **Transfer Call Node**: Redirects the conversation to a human agent or another department.
-
-* **API Call Node**: Allows integration with external systems by making API requests to fetch or send data.
+- **AI Conversation Node**: The core node where you provide specific instructions to the AI for handling a segment of the conversation.
+- **Knowledge Base Node**: Enables the AI to retrieve relevant information from a predefined knowledge source.
+- **End Call Node**: Terminates the conversation when a specific outcome is reached.
+- **Transfer Call Node**: Redirects the conversation to a human agent or another department.
+- **API Call Node**: Allows integration with external systems by making API requests to fetch or send data.
 
 ### 2. **Decision Triggers**
 
 Decision triggers define the connections between nodes, allowing conversations to progress based on predefined conditions. Each decision trigger can have:
 
-* **Conditional Logic**: Determines which path the AI should take based on user inputs, API responses, or internal variables.
-
-* **Multiple Branching Options**: Enables different conversation flows depending on various criteria.
+- **Conditional Logic**: Determines which path the AI should take based on user inputs, API responses, or internal variables.
+- **Multiple Branching Options**: Enables different conversation flows depending on various criteria.
 
 ## Why Use Workflows?
 
-* **Consistency**: Ensures that AI follows a structured and logical conversation flow.
-
-* **Modularity**: Allows different parts of the conversation to be broken into manageable segments.
-
-* **Flexibility**: Enables dynamic routing based on real-time inputs and conditions.
-
-* **Scalability**: Facilitates building complex conversational systems without overwhelming the AI with excessive instructions at once.
+- **Consistency**: Ensures that AI follows a structured and logical conversation flow.
+- **Modularity**: Allows different parts of the conversation to be broken into manageable segments.
+- **Flexibility**: Enables dynamic routing based on real-time inputs and conditions.
+- **Scalability**: Facilitates building complex conversational systems without overwhelming the AI with excessive instructions at once.
 
 By organizing AI conversations into Workflows, Plura AI enhances interaction quality, making AI-driven conversations more effective and user-friendly.
