Documentation edits made through Mintlify web editor

--- a/the-platform/workflows/overview.mdx
+++ b/the-platform/workflows/overview.mdx
@@ -1,8 +1,7 @@
 ---
 title: "Workflows"
+description: "A brief overview of the Workflow builder"
 ---
-
-<video controls className="w-full aspect-video" src="https://www.tella.tv/video/plura-overview-1-15ur" />
 
 ## What Are Workflows?
 
